--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DayPlanPart.DayPlanTable.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DayPlanPart.DayPlanTable.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="day-display-date-container" data-bind="with: $root.detailsPage.dayPlanPart.dayPlanTableVM">
 	<span class="display-date-small" data-bind="text: date.getDayName()"></span>
-	<span data-bind="text: date.day()"></span>
-	<span data-bind="text: date.getMonthName()"></span>
+	<span class="display-date-large" data-bind="text: date.day()"></span>
+	<span class="display-date-large" data-bind="text: date.getMonthName()"></span>
 	<span class="display-date-small" data-bind="text: date.year()"></span>
 </div>
 <div id="detailsDayTable">
