--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
@@ -3,14 +3,17 @@
 		<div class="event-list-item" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
 			<i class="md-icon-hover md-icon-rg mdi mdi-chevron-up expand-label"></i>
 			<div class="event-list-item-left">
-				<div class="event-kind-tag inline-block" data-bind="style: { color: kind.headerColor }, text: kind.name"></div>
-				<div class="list-item-date">
-					<div data-bind="html: startDate.displayFullDate_EnlargeDay()"></div>
-					<div data-bind="text: startDate.displayFullTime()"></div>
-				</div>
+				<div class="event-kind-tag inline-block" data-bind="style: { borderColor: kind.headerColor }, text: kind.name"></div>
+				<div class="list-item-date"></div>
 			</div>
 			<div class="event-list-item-right">
-				<div class="sm-label" data-bind="text: startDate.displayInfo()"></div>
+				<div>
+					<span class="sm-label-rg" data-bind="text: startDate.displayFullDate()"></span>
+					<span class="sm-label" data-bind="text: $root.dayNames[startDate.javaScriptStartDate.getDay()]"></span>,
+					<span class="sm-label" data-bind="text: startDate.displayInfo()"></span>,
+					<span class="sm-label" data-bind="text: startDate.displayFullTime()"></span>
+				</div>
+
 				<span class="list-item-title" data-bind="text: name"></span>
 			</div>
 		</div>
