--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsSettings.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsSettings.cshtml
@@ -1,13 +1,1 @@
-﻿@model KalendarzKarieryData.Models.ViewModels.RegisterViewModel
-
-<section id="settingsContainer">
-	<header class="section-title"></header>
-
-	@if (User.Identity.IsAuthenticated)
- {
-		@Html.Partial("_DetailsUserProfile", @Model)
- }
-
-
-</section>
-	
+﻿<div style="height:400px;"></div>
