--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_LayoutMobile.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_LayoutMobile.cshtml
@@ -15,8 +15,8 @@
 	</header>
 
 	<div id="appContainer">
-		<div id="spinnerContainer">
-			<span id="spinnerText"></span>
+		<div id="appSpinnerContainer">
+			<span id="appSpinnerText"></span>
 		</div>
 
 		@RenderBody()
