--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -1,6 +1,4 @@
-﻿@model KalendarzKarieryData.Models.ViewModels.RegisterViewModel
-
-<section class="dz-row journal-part">
+﻿<section class="dz-row journal-part">
 	<header class="section-title">Dziennik</header>
 	@Html.Partial( "_JournalPart" )
 </section>
@@ -11,7 +9,7 @@
 </section>
 
 <section class="dz-row settings-part">
-	@Html.Partial( "_DetailsSettings", @Model )
+	@Html.Partial( "_DetailsSettings")
 </section>
 
 
