--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model KalendarzKarieryData.Models.ViewModels.MainViewModel
-@Html.Partial( "_LoginBar" )
+﻿@Html.Partial( "_LoginBar" )
 <div id="initialWhiteOverlay"></div>
 <div id="dzieuo" style="visibility: hidden;">
 	<section id="lobby" class="dz-column">
@@ -30,7 +29,7 @@
 	</section>
 
 	<section id="details" class="dz-column">
-		@Html.Partial( "_Details", @Model.RegisterViewModel )
+		@Html.Partial( "_Details")
 	</section>
 </div>
 
